change name of a file

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav-items">
                     <li class="nav-item heading"> <a href="./index.html">HTML TUTORIAL</a></li>
                     <li class="nav-item"> <a href="./listofprograms.html">HTML Tutorial</a> </li>
-                    <li class="nav-item"> <a href="./csstutorial.html">CSS Tutorial</a> </li>
+                    <li class="nav-item"> <a href="./cssTutorial.html">CSS Tutorial</a> </li>
                 </ul>
             </nav>
             
